--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ pydantic==2.11.5
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 requests==2.32.3
 s3transfer==0.13.0
