--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,12 @@ certifi==2025.4.26
 charset-normalizer==3.4.2
 click==8.2.1
 fastapi==0.115.12
+greenlet==3.2.2
 h11==0.16.0
 httptools==0.6.4
 idna==3.10
 jmespath==1.0.1
+psycopg2-binary==2.9.10
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
