--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 annotated-types==0.7.0
 anyio==4.9.0
+asyncpg==0.30.0
 boto3==1.38.23
 botocore==1.38.23
 certifi==2025.4.26
@@ -11,7 +12,8 @@ h11==0.16.0
 httptools==0.6.4
 idna==3.10
 jmespath==1.0.1
-psycopg2-binary==2.9.10
+psycopg==3.2.9
+psycopg-binary==3.2.9
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
@@ -29,7 +31,7 @@ stripe==12.1.0
 typing-inspection==0.4.1
 typing_extensions==4.13.2
 urllib3==2.4.0
-uvicorn==0.34.2
+uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
