use psycopg2 driver vs v3

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 annotated-types==0.7.0
 anyio==4.9.0
-asyncpg==0.30.0
 boto3==1.38.23
 botocore==1.38.23
 certifi==2025.4.26
@@ -12,8 +11,8 @@ h11==0.16.0
 httptools==0.6.4
 idna==3.10
 jmespath==1.0.1
-psycopg==3.2.9
 psycopg-binary==3.2.9
+psycopg2-binary==2.9.10
 pydantic==2.11.5
 pydantic_core==2.33.2
 python-dateutil==2.9.0.post0
