--- a/requirements.txt
+++ b/requirements.txt
@@ -34,3 +34,7 @@ uvicorn==0.34.3
 uvloop==0.21.0
 watchfiles==1.0.5
 websockets==15.0.1
+celery==5.4.0
+redis==5.0.4
+PyJWT==2.8.0
+reportlab==4.1.0
