Add env examples and frontend API config

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ AWS_ACCESS_KEY_ID=AKIAxxx
 AWS_SECRET_ACCESS_KEY=xxx
 AWS_REGION=us-east-1
 DATABASE_URL=postgresql+psycopg://user:pass@host/db
+AWS_S3_BUCKET=your-s3-bucket
+SUPABASE_URL=https://project.supabase.co
+SUPABASE_JWT_SECRET=jwtsecret
+CELERY_BROKER_URL=redis://localhost:6379/0
