Add frontend with configurable API URL

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ AWS_ACCESS_KEY_ID=AKIAxxx
 AWS_SECRET_ACCESS_KEY=xxx
 AWS_REGION=us-east-1
 DATABASE_URL=postgresql+psycopg://user:pass@host/db
+NEXT_PUBLIC_API_URL=http://localhost:8000
