docs: add AWS_S3_BUCKET env and tidy routing

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ STRIPE_WH_SECRET=whsec_xxx
 AWS_ACCESS_KEY_ID=AKIAxxx
 AWS_SECRET_ACCESS_KEY=xxx
 AWS_REGION=us-east-1
+AWS_S3_BUCKET=example-bucket
 DATABASE_URL=postgresql+psycopg://user:pass@host/db
 NEXT_PUBLIC_API_URL=http://localhost:8000
